---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clock) -> bool __builtin__
pipeline(4) Y(clk: clock) -> bool __builtin__

pipeline(5) main(clk: clock, x: bool) -> bool {
        let _ = match x {
            true => inst(5) X(clk),
            false => inst(4) Y(clk)
        };
    reg*5;
        x
}


error: All subexpressions need the same pipeline delay
  ┌─ testinput:7:22
  │
6 │             true => inst(5) X(clk),
  │                     -------------- But this has delay 5
7 │             false => inst(4) Y(clk)
  │                      ^^^^^^^^^^^^^^ This has delay 4


